monitoring/extra-manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: monitoring
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: istio-gateway
    namespace: istio-ingress
    sectionName: grafana
  hostnames:
  - monitoring.nvtienanh.info
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: monitoring-grafana
      group: ''	
      kind: Service
      port: 80
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: monitoring
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: istio-gateway
    namespace: istio-ingress
    sectionName: http
  hostnames:
  - monitoring.nvtienanh.info
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443
        statusCode: 302
    matches:	
        - path:	
            type: PathPrefix	
            value: /
